[gd_scene load_steps=46 format=2]

[ext_resource path="res://actor/demon/sprite/walk_1.png" type="Texture" id=1]
[ext_resource path="res://actor/demon/sprite/dead_1.png" type="Texture" id=2]
[ext_resource path="res://actor/demon/sprite/attack1_3.png" type="Texture" id=3]
[ext_resource path="res://actor/demon/sprite/attack1_1.png" type="Texture" id=4]
[ext_resource path="res://actor/demon/sprite/attack2_5.png" type="Texture" id=5]
[ext_resource path="res://actor/demon/sprite/attack2_2.png" type="Texture" id=6]
[ext_resource path="res://actor/demon/sprite/ready_3.png" type="Texture" id=7]
[ext_resource path="res://actor/demon/sprite/ready_5.png" type="Texture" id=8]
[ext_resource path="res://actor/demon/sprite/ready_4.png" type="Texture" id=9]
[ext_resource path="res://actor/demon/sprite/ready_6.png" type="Texture" id=10]
[ext_resource path="res://actor/demon/sprite/attack1_2.png" type="Texture" id=11]
[ext_resource path="res://actor/demon/sprite/ready_1.png" type="Texture" id=12]
[ext_resource path="res://actor/demon/sprite/dead_2.png" type="Texture" id=13]
[ext_resource path="res://actor/demon/sprite/ready_2.png" type="Texture" id=14]
[ext_resource path="res://actor/demon/DemonState.gd" type="Script" id=15]
[ext_resource path="res://actor/demon/sprite/attack1_5.png" type="Texture" id=16]
[ext_resource path="res://actor/demon/EnemyStats.gd" type="Script" id=17]
[ext_resource path="res://actor/demon/sprite/attack2_1.png" type="Texture" id=18]
[ext_resource path="res://actor/demon/sprite/attack2_4.png" type="Texture" id=19]
[ext_resource path="res://actor/demon/sprite/attack1_6.png" type="Texture" id=20]
[ext_resource path="res://actor/demon/sprite/attack1_4.png" type="Texture" id=21]
[ext_resource path="res://actor/demon/Demon.gd" type="Script" id=22]
[ext_resource path="res://actor/demon/sprite/dead_4.png" type="Texture" id=23]
[ext_resource path="res://actor/demon/sprite/dead_3.png" type="Texture" id=24]
[ext_resource path="res://actor/demon/sprite/attack2_3.png" type="Texture" id=25]
[ext_resource path="res://actor/demon/sprite/walk_3.png" type="Texture" id=26]
[ext_resource path="res://actor/demon/sprite/walk_2.png" type="Texture" id=27]
[ext_resource path="res://actor/demon/sprite/walk_4.png" type="Texture" id=28]
[ext_resource path="res://actor/demon/sprite/walk_5.png" type="Texture" id=29]
[ext_resource path="res://actor/demon/sprite/walk_6.png" type="Texture" id=30]
[ext_resource path="res://actor/demon/sprite/hit_3.png" type="Texture" id=31]
[ext_resource path="res://actor/demon/sprite/hit_2.png" type="Texture" id=32]
[ext_resource path="res://actor/demon/sprite/hit_1.png" type="Texture" id=33]
[ext_resource path="res://actor/demon/sprite/attack2_6.png" type="Texture" id=34]
[ext_resource path="res://actor/demon/HealthBar.gd" type="Script" id=35]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.419608, 0.592157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.258824, 0.141176, 0.270588, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 13 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "died",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 20 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 6 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 34 ) ],
"loop": true,
"name": "attack2",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 32 ), ExtResource( 31 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 1.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_Attack"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "died" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9, 15 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 19, 41 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 9, 15 )

[node name="Demon" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 2147483652
script = ExtResource( 22 )

[node name="DemonState" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="EnemyStats" type="Node" parent="."]
script = ExtResource( 17 )

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -21.0
margin_right = 285.0
margin_bottom = 9.0
rect_scale = Vector2( 0.1, 0.1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
script = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideTimer" type="Timer" parent="HealthBar"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, -12 )
scale = Vector2( 0.85, 0.85 )
frames = SubResource( 3 )
animation = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/attack = SubResource( 4 )
anims/died = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Detector" type="Node2D" parent="."]

[node name="FrontDetector" type="Area2D" parent="Detector"]
position = Vector2( 10.3333, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector/FrontDetector"]
position = Vector2( 37.6667, -3 )
shape = SubResource( 9 )

[node name="BackDetector" type="RayCast2D" parent="Detector"]
position = Vector2( -9, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="DownDetector" type="RayCast2D" parent="Detector"]
position = Vector2( 15, 15 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2147483652

[node name="AttackDetector" type="RayCast2D" parent="Detector"]
position = Vector2( 9, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 8 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 10 )
[connection signal="enemy_died" from="EnemyStats" to="." method="_on_EnemyStats_enemy_died"]
[connection signal="enemy_health_changed" from="EnemyStats" to="HealthBar" method="_on_enemy_health_changed"]
[connection signal="timeout" from="HealthBar/HideTimer" to="." method="_on_HideTimer_timeout"]
[connection signal="body_entered" from="Detector/FrontDetector" to="." method="_on_FrontDetector_body_entered"]
[connection signal="body_exited" from="Detector/FrontDetector" to="." method="_on_FrontDetector_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_Player_Attack"]
